[tool.poetry]
name = "federated-mutual-aid"
version = "0.1.0"
description = "A project exploring mutual aid and theories of value from an AI and Federation perspective."
authors = ["Ryan Peach <rgpeach10@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphene-mongo = "^0.2.15"
mongoengine = "^0.27.0"
pymongo = "^4.6.0"
activitypub = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
